--- a/1 - Atomic Structure/1.7-AtomSize.md
+++ b/1 - Atomic Structure/1.7-AtomSize.md
@@ -1,11 +1,12 @@
-# Size Of Atoms
+# Lesson 1.7 - Size Of Atoms
 
 In this lesson:
 
 * [Size of an atom](#size-of-an-atom)
 * [Nucleus size](#nucleus-size)
 * [Nucleus mass](#nucleus-mass)
-* [
+* [Atomic mass](#atomic-mass)
+* [Atomic mass table](#atomic-mass-table)
 
 ## Size of an atom
 
