--- a/1-AtomicStructure/1.4-Compounds.md
+++ b/1-AtomicStructure/1.4-Compounds.md
@@ -1,5 +1,7 @@
 # Lesson 1.4 - Compounds
 
+In this lesson:
+
 * [What are compounds?](#what-is-a-compound)
 * [Forming compounds](#forming-compounds)
 * [Separating compounds](#separating-compounds)
