--- a/1-AtomicStructure/1.8-RelAtomicMass.md
+++ b/1-AtomicStructure/1.8-RelAtomicMass.md
@@ -28,7 +28,7 @@ Note: the number of protons in an element is always the same.
 
 ## Relative atomic mass
 
-The relative atomic mass is the average atomic mass of each atom in the element.
+The relative atomic mass is the average atomic mass of every atom in the element.
 
 Let's imagine a made-up element. We'll call it... zodior.
 
