--- a/1-AtomicStructure/1.9-ElectronStructure.md
+++ b/1-AtomicStructure/1.9-ElectronStructure.md
@@ -24,7 +24,7 @@ We can represent electrons in an atom using a diagram.
 
 Sodium is represented as follows:
 
-![Electron diagram of sodium: 2, 8, 1](../res/sodium-electronic-structure.png)
+![Electron diagram of sodium: 2, 8, 1](../res/sodium-electronic-structure.png){width=200, height=200}
 
 with 2 in the first shell (energy level), 8 in the second, and 1 in the third.
 
