--- a/2-PeriodicTable/2.6-Group1.md
+++ b/2-PeriodicTable/2.6-Group1.md
@@ -26,6 +26,6 @@ The reactivity **increases** going down the group.
 
 This means that, for instance, potassium (K) is more reactive than lithium (Li).
 
-## Fun video :\)
+## Fun video!
 
 To see the reactivity of alkali metals (particularly caesium) for yourself, check out [this entertaining video](https://www.youtube.com/watch?v=5Vd5pqjbWJU) about dropping caesium into water...!
