--- a/3-Bonding/3.1-ChemicalBonds.md
+++ b/3-Bonding/3.1-ChemicalBonds.md
@@ -1,1 +1,39 @@
 # Lesson 3.1 - Chemical Bonds
+
+## Types of bond
+
+There are three types of chemical bonds:
+
+* Ionic
+* Covalent
+* Metallic
+
+The type of bond depends on the elements involved in the reaction.
+
+## Ionic bonding
+
+Ionic bonding is between a *metal* and a *non-metal*.
+
+An ionic bond is formed when electrons are *transferred* (from the metal to the non-metal).
+
+The metal becomes a **positive ion**, and the non-metal becomes a **negative ion**.
+
+## Covalent bonding
+
+Covalent bonding is between two *non-metals*.
+
+It is formed when electrons are *shared*.
+
+## Metallic bonding
+
+Metallic bonding is between two *metals*.
+
+The electrons in a metallic bond are *delocalised*.
+
+## Overview
+
+| Bond     | Elements              | Electrons   |
+|----------|-----------------------|-------------|
+| Ionic    | metal + non-metal     | transferred |
+| Covalent | non-metal + non-metal | shared      |
+| Metallic | metal + non-metal     | delocalised |
